Resolved design issue fix-issue-19380

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -156,6 +156,43 @@
             } 
         }
     }
+    .product-options {
+        > .admin__field {
+            border: 0;
+            margin: 0 0 3rem 0;
+            padding: 0;
+            #mix-grid .row();
+    
+            &.admin__field-wide {
+                &:extend(.abs-field-rows all);
+            }
+    
+            > .admin__field-control {
+                #mix-grid .column(@field-control-grid__column, @field-grid__columns);
+                float: none;
+                display: inline-block;
+            }
+    
+            > .admin__field-label {
+                #mix-grid .column(@field-label-grid__column, @field-grid__columns);
+                float: none;
+                display: inline-block;
+            }
+      
+            &:extend(.abs-field-sizes all);
+    
+            &.admin__field-no-label {
+                > .admin__field-label {
+                    display: none;
+                }
+    
+                > .admin__field-control {
+                    &:extend(.abs-field-no-label all);
+                }
+            }
+    
+        }
+    }
 }
 
 .admin__fieldset-product-websites {
