--- a/app/design/frontend/Magento/luma/web/css/source/components/_modals_extend.less
+++ b/app/design/frontend/Magento/luma/web/css/source/components/_modals_extend.less
@@ -83,7 +83,8 @@
 
     .modal-slide {
         .action-close {
-            padding: @modal-slide-action-close__padding;
+            padding: 0;
+            margin: 15px;
         }
 
         .page-main-actions {
