--- a/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
+++ b/app/design/adminhtml/Magento/backend/Magento_Backend/web/css/source/module/main/actions-bar/_store-switcher.less
@@ -7,10 +7,10 @@
 //  Main elements -> Actions bar -> Store Switcher
 //  _____________________________________________
 
-//  ToDo UI: Consist old styles, should be changed with new design
+//  ToDo UI:  Consist old styles, should be changed with new design
 
 .store-switcher {
-    color: @text__color; // ToDo UI: Delete with admin scope
+    color: @text__color;
     float: left;
     font-size: round(@font-size__base - .1rem, 1);
     margin-top: .59rem;
@@ -47,8 +47,8 @@
             width: 7px;
         }
         &::-webkit-scrollbar-thumb {
-            border-radius: 4px;
             background-color: rgba(0, 0, 0, .5);
+            border-radius: 4px;
         }
 
         li {
