Fixed 19800 Contact us : design improvement

--- a/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
+++ b/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
@@ -1,7 +1,6 @@
-//  * Copyright © Magento, Inc. All rights reserved.
-//  * See COPYING.txt for license details.
-//  Common
-//  _____________________________________________
+/** Copyright © Magento, Inc. All rights reserved.
+  * See COPYING.txt for license details.
+  Common */
 & when (@media-common = true) {
 	.contact-index-index {
 		.column:not(.sidebar-main){
@@ -18,9 +17,8 @@
 		}
 	}
 }
-//
-//  Mobile
-//  _____________________________________________
+
+//	Mobile 
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
 	.contact-index-index {
 		.column:not(.sidebar-main){
