--- a/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
+++ b/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
@@ -1,6 +1,7 @@
 /** Copyright © Magento, Inc. All rights reserved.
   * See COPYING.txt for license details.
-  Common */
+  Common 
+*/
 & when (@media-common = true) {
 	.contact-index-index {
 		.column:not(.sidebar-main){
