Fixed 19800 Contact us : design improvement

--- a/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
+++ b/app/code/Magento/Contact/view/frontend/web/css/source/_module.less
@@ -1,6 +1,6 @@
-/** Copyright © Magento, Inc. All rights reserved.
-  * See COPYING.txt for license details.
-  Common 
+/**
+ * Copyright © Magento, Inc. All rights reserved.
+ * See COPYING.txt for license details.
 */
 & when (@media-common = true) {
 	.contact-index-index {
