Fix issue 19887 creating new shipment: getting all trackers.

--- a/app/code/Magento/Sales/view/frontend/templates/email/shipment/track.phtml
+++ b/app/code/Magento/Sales/view/frontend/templates/email/shipment/track.phtml
@@ -19,7 +19,7 @@
         </tr>
     </thead>
     <tbody>
-    <?php foreach ($_shipment->getAllTracks() as $_item): ?>
+    <?php foreach ($_order->getTracksCollection($_shipment->getId()) as $_item): ?>
         <tr>
             <td><?= $block->escapeHtml($_item->getTitle()) ?>:</td>
             <td><?= $block->escapeHtml($_item->getNumber()) ?></td>
