Removing the javascript from html and separated it to a javascript file.

--- a/app/code/Magento/Checkout/view/frontend/templates/cart/totals.phtml
+++ b/app/code/Magento/Checkout/view/frontend/templates/cart/totals.phtml
@@ -15,20 +15,13 @@
     <script type="text/x-magento-init">
             {
                 "#cart-totals": {
-                    "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout() ?>
+                    "Magento_Ui/js/core/app": <?= /* @escapeNotVerified */ $block->getJsLayout() ?>,
+                    "Magento_Checkout/js/totals": {
+                        "checkoutConfig":<?= /* @escapeNotVerified */ $block->getSerializedCheckoutConfig() ?>,
+                        "loaderFile":"<?= /* @escapeNotVerified */ $block->getViewFileUrl('images/loader-1.gif') ?>",
+                        "baseUrl":"<?= /* @escapeNotVerified */ $block->getBaseUrl() ?>"
+                    }
                 }
             }
-    </script>
-    <script>
-        window.checkoutConfig = <?= /* @escapeNotVerified */ $block->getSerializedCheckoutConfig() ?>;
-        window.customerData = window.checkoutConfig.customerData;
-        window.isCustomerLoggedIn = window.checkoutConfig.isCustomerLoggedIn;
-        require([
-            'mage/url',
-            'Magento_Ui/js/block-loader'
-        ], function(url, blockLoader) {
-            blockLoader("<?= /* @escapeNotVerified */ $block->getViewFileUrl('images/loader-1.gif') ?>");
-            return url.setBaseUrl('<?= /* @escapeNotVerified */ $block->getBaseUrl() ?>');
-        })
     </script>
 </div>
