[Fixed Radio alignment issue #20025]

--- a/lib/web/css/source/lib/_forms.less
+++ b/lib/web/css/source/lib/_forms.less
@@ -304,6 +304,7 @@
 
     input[type="radio"] {
         .lib-form-element-choice(@_type: input-radio);
+        vertical-align: middle;
     }
 
     input,
