--- a/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
@@ -334,7 +334,8 @@
         }
     }
 
-    .order-products-toolbar, .customer-addresses-toolbar {
+    .order-products-toolbar,
+    .customer-addresses-toolbar {
         position: relative;
 
         .toolbar-amount {
