--- a/app/design/adminhtml/Magento/backend/web/css/styles-old.less
+++ b/app/design/adminhtml/Magento/backend/web/css/styles-old.less
@@ -2739,6 +2739,7 @@
 
     #widget_instace_tabs_properties_section_content .widget-option-label {
         margin-top: 6px;
+        display: inline-block;
     }
 
     //
