--- a/app/code/Magento/Catalog/view/frontend/templates/product/view/gallery.phtml
+++ b/app/code/Magento/Catalog/view/frontend/templates/product/view/gallery.phtml
@@ -35,6 +35,7 @@ $mainImageData = $mainImage ?
     <img
         alt="main product photo"
         class="gallery-placeholder__image"
+        itemprop="image"
         src="<?= /* @noEscape */ $mainImageData ?>"
         <?= $imageWidth ? 'width="'. $escaper->escapeHtmlAttr($imageWidth) .'"' : '' ?>
         <?= $imageHeight ? 'height="'. $escaper->escapeHtmlAttr($imageHeight) .'"' : '' ?>
