--- a/app/design/frontend/Magento/luma/web/css/source/_extends.less
+++ b/app/design/frontend/Magento/luma/web/css/source/_extends.less
@@ -1437,7 +1437,7 @@
                 }
 
                 .order-status {
-                    @order-status-indent: ceil(@h1__margin-bottom/2);
+                    @order-status-indent: ceil((@h1__margin-bottom/2));
                     margin: -@order-status-indent 0 @indent__s;
                 }
             }
@@ -1450,7 +1450,7 @@
         .page-main {
             .page-title-wrapper {
                 .order-date {
-                    @order-date-indent: ceil(@h1__margin-bottom/1.5);
+                    @order-date-indent: ceil((@h1__margin-bottom/1.5));
                     margin: -@order-date-indent 0 18px;
                 }
             }
