Display backordered quantity if the order item has them

--- a/app/code/Magento/Sales/view/adminhtml/templates/items/column/qty.phtml
+++ b/app/code/Magento/Sales/view/adminhtml/templates/items/column/qty.phtml
@@ -11,6 +11,13 @@
             <td><?= (float) $item->getQtyOrdered() ?></td>
         </tr>
 
+        <?php if ((float)$item->getQtyBackordered()) : ?>
+            <tr>
+                <th><?= $block->escapeHtml(__('Backordered')); ?></th>
+                <td><?= (float) $item->getQtyBackordered() ?></td>
+            </tr>
+        <?php endif; ?>
+        
         <?php if ((float)$item->getQtyInvoiced()) : ?>
             <tr>
                 <th><?= $block->escapeHtml(__('Invoiced')); ?></th>
