--- a/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/visual.phtml
+++ b/app/code/Magento/Swatches/view/adminhtml/templates/catalog/product/attribute/visual.phtml
@@ -5,6 +5,7 @@
  */
 
 // phpcs:disable PHPCompatibility.Miscellaneous.RemovedAlternativePHPTags.MaybeASPOpenTagFound
+// phpcs:disable Generic.Files.LineLength.TooLong
 /** @var $block \Magento\Swatches\Block\Adminhtml\Attribute\Edit\Options\Visual */
 
 $stores = $block->getStoresSortedBySortOrder();
@@ -20,8 +21,8 @@ $stores = $block->getStoresSortedBySortOrder();
                 <th class="col-draggable"></th>
                 <th class="col-default"><span><?= $block->escapeHtml(__('Is Default')) ?></span></th>
                 <th><span><?= $block->escapeHtml(__('Swatch')) ?></span></th>
-                <?php foreach ($stores as $_store) : ?>
-                    <th<?= ($_store->getId() == \Magento\Store\Model\Store::DEFAULT_STORE_ID) ? ' class="_required"' : '' ?>
+                <?php foreach ($stores as $_store): ?>
+                    <th<?= ($_store->getId() == \Magento\Store\Model\Store::DEFAULT_STORE_ID) ? ' class="_required"' : '' ?>>
                         <span><?= $block->escapeHtml($_store->getName()) ?></span>
                     </th>
                 <?php endforeach; ?>
@@ -39,7 +40,7 @@ $stores = $block->getStoresSortedBySortOrder();
             </tr>
             <tr>
                 <th colspan="<?= (int)$colTotal ?>" class="col-actions-add">
-                    <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()) : ?>
+                    <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()): ?>
                         <button id="add_new_swatch_visual_option_button"
                                 title="<?= $block->escapeHtml(__('Add Swatch')) ?>"
                                 type="button" class="action- scalable add">
@@ -55,7 +56,7 @@ $stores = $block->getStoresSortedBySortOrder();
     <script id="swatch-visual-row-template" type="text/x-magento-template">
         <tr>
             <td class="col-draggable">
-                <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()) : ?>
+                <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()): ?>
                     <div data-role="draggable-handle" class="draggable-handle"
                          title="<?= $block->escapeHtml(__('Sort Option')) ?>"></div>
                 <?php endif; ?>
@@ -86,7 +87,7 @@ $stores = $block->getStoresSortedBySortOrder();
                     </div>
                 </div>
             </td>
-            <?php foreach ($stores as $_store) : ?>
+            <?php foreach ($stores as $_store): ?>
                 <td class="swatch-col-<%- data.id %>">
                     <input name="optionvisual[value][<%- data.id %>][<?= (int)$_store->getId() ?>]"
                            value="<%- data.store<?= (int) $_store->getId() ?> %>"
@@ -96,7 +97,7 @@ $stores = $block->getStoresSortedBySortOrder();
             <?php endforeach; ?>
             <td id="delete_button_swatch_container_<%- data.id %>" class="col-delete">
                 <input type="hidden" class="delete-flag" name="optionvisual[delete][<%- data.id %>]" value="" />
-                <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()) : ?>
+                <?php if (!$block->getReadOnly() && !$block->canManageOptionDefaultOnly()): ?>
                     <button title="<?= $block->escapeHtml(__('Delete')) ?>" type="button"
                             class="action- scalable delete delete-option">
                         <span><?= $block->escapeHtml(__('Delete')) ?></span>
