add permission check for "reload data" data button
despite that the user does not have permission for refreshing the statistics button, it is shown and when pressed a "not permitted" page is shown.

therefore add the check that is used with that controller action.

--- a/app/code/Magento/Backend/view/adminhtml/templates/dashboard/totalbar/refreshstatistics.phtml
+++ b/app/code/Magento/Backend/view/adminhtml/templates/dashboard/totalbar/refreshstatistics.phtml
@@ -1,4 +1,5 @@
 <?php
+/** @var \Magento\Backend\Block\Template $block */
 /**
  * Copyright © Magento, Inc. All rights reserved.
  * See COPYING.txt for license details.
@@ -9,6 +10,7 @@
         <div class="page-actions-buttons">
             <?= $block->getChildHtml() ?>
 
+            <?php if ($block->getAuthorization()->isAllowed('Magento_Reports::statistics')): ?>
             <form class="action-element"
                   action="<?= $block->escapeUrl($block->getUrl('*/*/refreshStatistics')) ?>"
                   method="post">
@@ -23,6 +25,7 @@
                     <?= $block->escapeHtml(__('Reload Data')) ?>
                 </button>
             </form>
+            <?php endif; ?>
         </div>
     </div>
 </div>
