--- a/app/code/Magento/Cms/view/adminhtml/templates/browser/content/uploader.phtml
+++ b/app/code/Magento/Cms/view/adminhtml/templates/browser/content/uploader.phtml
@@ -22,9 +22,11 @@ $blockHtmlId = $block->getHtmlId();
 >
     <span class="fileinput-button form-buttons">
         <span><?= $block->escapeHtml(__('Upload Images')) ?></span>
-        <input class="fileupload" type="file"
-               name="<?= $block->escapeHtmlAttr($block->getConfig()->getFileField()) ?>"
-               data-url="<?= $block->escapeUrl($block->getConfig()->getUrl()) ?>" multiple>
+            <button id="fileUploader"
+                name="<?= $block->escapeHtmlAttr($block->getConfig()->getFileField()) ?>"
+                value="Upload Images"
+                data-url="<?= $block->escapeUrl($block->getConfig()->getUrl()) ?>"
+            ><?= $block->escapeHtml(__('Upload Images')) ?></button>
     </span>
     <div class="clear"></div>
     <script type="text/x-magento-template" id="<?= /* @noEscape */ $blockHtmlId ?>-template">
