--- a/app/design/frontend/Magento/blank/web/css/email.less
+++ b/app/design/frontend/Magento/blank/web/css/email.less
@@ -35,3 +35,10 @@
 @import 'source/lib/_responsive.less';
 //  It is impossible to apply media queries as inline styles, so all media queries must be output in this file
 @media-target: 'all';
+
+//
+//  Non-inline styles
+//  ---------------------------------------------
+
+//  Include all styles that have been indicated as non-inline styles
+.email-non-inline();
