Remove active category in the cache key
- Fix integration tests;

--- a/app/code/Magento/Theme/view/frontend/templates/html/topmenu.phtml
+++ b/app/code/Magento/Theme/view/frontend/templates/html/topmenu.phtml
@@ -18,8 +18,12 @@ $widgetOptions = [
         [
             'responsive' => true,
             'expanded' => true,
-            'position' => ['my' => 'left top', 'at' => 'left bottom']
-        ])
+            'position' => [
+                'my' => 'left top',
+                'at' => 'left bottom'
+            ]
+        ]
+    )
 ];
 $widgetOptionsJson = $jsonSerializer->serialize($widgetOptions);
 ?>
