Remove active category in the cache key
- Remove dependency to Catalog from Theme module;
- Enhance menu.js logic;

--- a/app/code/Magento/Catalog/view/frontend/layout/default.xml
+++ b/app/code/Magento/Catalog/view/frontend/layout/default.xml
@@ -66,5 +66,12 @@
             <block class="Magento\Framework\View\Element\Js\Components" name="head.components" as="components" template="Magento_Catalog::js/components.phtml"/>
         </referenceContainer>
         <block class="Magento\Framework\View\Element\Template" name="head.additional" as="head.additional" template="Magento_Theme::html/container.phtml"/>
+        <referenceContainer name="page.top">
+            <referenceBlock name="catalog.topnav" template="Magento_Catalog::html/topmenu.phtml">
+                <arguments>
+                    <argument name="viewModel" xsi:type="object">Magento\Catalog\ViewModel\SeoConfigTopMenu</argument>
+                </arguments>
+            </referenceBlock>
+        </referenceContainer>
     </body>
 </page>
