--- a/app/code/Magento/Email/view/frontend/email/header.html
+++ b/app/code/Magento/Email/view/frontend/email/header.html
@@ -20,11 +20,12 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <style type="text/css">
-        {{css file="css/email.css"}}
+        {{css file="css/email-noninine.css"}}
         {{var template_styles|raw}}
     </style>
 </head>
 <body>
+{{inclinecss file="css/email.css"}}
 {{inlinecss file="css/email-inline.css"}}
 <!-- Begin wrapper table -->
 <table class="wrapper" width="100%">
