--- a/app/code/Magento/Email/view/frontend/email/header.html
+++ b/app/code/Magento/Email/view/frontend/email/header.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <style type="text/css">
-        {{css file="css/email-noninine.css"}}
+        {{css file="css/email-noninline.css"}}
         {{var template_styles|raw}}
     </style>
 </head>
