--- a/app/code/Magento/Cms/view/adminhtml/templates/browser/content/uploader.phtml
+++ b/app/code/Magento/Cms/view/adminhtml/templates/browser/content/uploader.phtml
@@ -6,6 +6,7 @@
 
 // phpcs:disable PHPCompatibility.Miscellaneous.RemovedAlternativePHPTags.MaybeASPOpenTagFound
 /** @var $block \Magento\Cms\Block\Adminhtml\Wysiwyg\Images\Content\Uploader */
+/** @var \Magento\Framework\Escaper $escaper */
 
 $blockHtmlId = $block->getHtmlId();
 ?>
@@ -21,12 +22,12 @@ $blockHtmlId = $block->getHtmlId();
     }'
 >
     <span class="fileinput-button form-buttons">
-        <span><?= $block->escapeHtml(__('Upload Images')) ?></span>
+        <span><?= $escaper->escapeHtml(__('Upload Images')) ?></span>
             <button id="fileUploader"
-                name="<?= $block->escapeHtmlAttr($block->getConfig()->getFileField()) ?>"
+                name="<?= $escaper->escapeHtmlAttr($block->getConfig()->getFileField()) ?>"
                 value="Upload Images"
-                data-url="<?= $block->escapeUrl($block->getConfig()->getUrl()) ?>"
-            ><?= $block->escapeHtml(__('Upload Images')) ?></button>
+                data-url="<?= $escaper->escapeUrl($block->getConfig()->getUrl()) ?>"
+            ><?= $escaper->escapeHtml(__('Upload Images')) ?></button>
     </span>
     <div class="clear"></div>
     <script type="text/x-magento-template" id="<?= /* @noEscape */ $blockHtmlId ?>-template">
